# jeopardy-subdataset-generate

./: Description.md  README.md  classify_dataset.py  exploration.py  generate_subdatasets.py  pyproject.toml  verify_env.py  verify_subdatasets.py
__marimo__/session/: exploration.py.json  verify_subdatasets.py.json
generated_samples/: group1_subdataset_1.json  group1_subdataset_10.json  group1_subdataset_11.json  group1_subdataset_12.json  group1_subdataset_13.json  group1_subdataset_14.json  group1_subdataset_15.json  group1_subdataset_16.json  group1_subdataset_17.json  group1_subdataset_18.json  group1_subdataset_19.json  group1_subdataset_2.json  group1_subdataset_20.json  group1_subdataset_21.json  group1_subdataset_22.json  group1_subdataset_23.json  group1_subdataset_24.json  group1_subdataset_25.json  group1_subdataset_26.json  group1_subdataset_27.json  group1_subdataset_28.json  group1_subdataset_29.json  group1_subdataset_3.json  group1_subdataset_30.json  group1_subdataset_4.json  group1_subdataset_5.json  group1_subdataset_6.json  group1_subdataset_7.json  group1_subdataset_8.json  group1_subdataset_9.json  group2_subdataset_1.json  group2_subdataset_10.json  group2_subdataset_11.json  group2_subdataset_12.json  group2_subdataset_13.json  group2_subdataset_14.json  group2_subdataset_15.json  group2_subdataset_16.json  group2_subdataset_2.json  group2_subdataset_3.json  (+37 more)
